@@ -15,6 +15,8 @@ UPDATED FUNCTIONS:
   * AUC() has been gently revised.  (...but can't be published before package 
     sobir is updated.
   * Freq will report the median class as attribute.  
+  * Desc.numeric() and Desc.Date() get a new attribute include_x to prevent the
+    function to return the provided argument x.
   
 BUGFIXES:
   * PlotDot() did not calculate correctly the left margin. In this connection
